--- a/contatos.html
+++ b/contatos.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Navegação Vertical</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-<body id="contatos">	
+<body id="contatos">		
 	<h2>Contatos</h2>
 	<ul id="navegacao">
 		<li class="home"> <a href="index.html">Home</a></li>
