--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Navegação Vertical</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body id="home">
 	<h2>Home</h2>
@@ -14,16 +14,5 @@
 		<li class="noticias"> <a href="noticias.html">Notícias</a></li>
 		<li class="contatos"> <a href="contatos.html">Contatos</a></li>
 	</ul>
-
-	<!--
-	<h2>Lista de atividades</h2>
-	<ul>
-		<li>Ir ao dentista</li>
-		<li>Ir ao supermercado</li>
-		<li>Fazer o almoço</li>
-		<li>Assistir série</li>
-		<li>Correr no parque</li>
-	</ul> -->
-
 </body>
 </html>
