--- a/noticias.html
+++ b/noticias.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Navegação Vertical</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body id="noticias">
 	<h2>Noticias</h2>
